<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.budi.caquapplicaton.ui.reset.NewPasswordActivity">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/formCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_below="@id/logoImageView"
        android:layout_marginTop="80dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:elevation="4dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_card_background">

        <TextView
            android:id="@+id/resetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textSize="24sp"
            android:textColor="#42A5F5"
            android:textStyle="bold"
            android:fontFamily="@font/montserratbold"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/emailRequirement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_requests_fill"
            android:textSize="14sp"
            android:textColor="#A0A0A0"
            android:gravity="center"
            android:fontFamily="@font/montserratmedium"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="#e8f8ff"
                android:hint="@string/email"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/montserratmedium"
                android:background="@drawable/rounded_edittext_background" />
        </FrameLayout>

        <TextView
            android:id="@+id/passwordRequirement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_requests_fill"
            android:textSize="14sp"
            android:textColor="#A0A0A0"
            android:gravity="center"
            android:fontFamily="@font/montserratmedium"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="#e8f8ff"
                android:hint="@string/password"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="textPassword"
                android:fontFamily="@font/montserratmedium"
                android:background="@drawable/rounded_edittext_background" />
        </FrameLayout>

        <Button
            android:id="@+id/confirm_change_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/button_background"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:fontFamily="@font/montserratmedium"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
